@@ -2,4 +2,4 @@ INCLUDES = -I$(top_srcdir)/src
 
 noinst_LIBRARIES = libFramework.a
 
-libFramework_a_SOURCES = Tokeniser.cpp ConsoleBackend.cpp ComponentFactory.h Component.h ConsoleBackend.h ConsoleObject.h  Exception.h Service.h ServiceManager.h templategameview.h Tokeniser.h
+libFramework_a_SOURCES = Tokeniser.cpp ConsoleBackend.cpp ComponentFactory.h Component.h ConsoleBackend.h ConsoleObject.h  Exception.h Service.h ServiceManager.h templategameview.h Tokeniser.h EntityListener.cpp EntityListener.h
