@@ -1,3 +1,10 @@
+2002-13-10 M Pollard <circlemaster@blueyonder.co.uk>
+	* EntityListener.cpp/h: Rename of gameview creation of new pure virtual
+	  base class.  Reviews welcome!
+
+	* TemplateEntityListener.cpp/h templategameview.cpp/h: rename and
+	  modify of GameView template.
+
 2002-12-10 M Pollard <circlemaster@blueyonder.co.uk>
 	* templategameview.cpp/h: Updated this.
 
